--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <p>This is a test. Thank You.</p>
     <button id="myButton">Click me</button>
     <input type="text" id="userInput" placeholder="Type something here...">
+    <p id="displayMessage">Button has not been clicked yet.</p>
     <script src="script.js"></script>
+
 </body>
 </html>
