--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Anthony Goines</h1>
     <p>This is a test. Thank You.</p>
-    <button id="myButton">Click me</button>
     <input type="text" id="userInput" placeholder="Type something here...">
+    <br> <button id="myButton">Click me</button>
     <p id="displayMessage">Button has not been clicked yet.</p>
     <script src="script.js"></script>
 
